@@ -20,9 +20,6 @@
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  *
  * $Id$
- *
- * Checked for jEdit 4.0 API
- *
  */
 
 // Inserts the current date and Internet Time at the caret position
@@ -58,7 +55,10 @@ void insertDate()
 		+ " @" + (int)swatch + " /Internet Time/");
 }
 
-insertDate();
+if(buffer.isReadOnly())
+	Macros.error(view, "Buffer is read-only.");
+else
+	insertDate();
 
 /*
 	Macro index data (in DocBook format)
